Fahrenheit bug fixed. Improved location settings - delete, current - buttons.

--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -42,7 +42,7 @@
                         android:textSize="18sp" />
 
                     <EditText
-                        android:id="@+id/et_sunrise"
+                        android:id="@+id/et_current_location"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
