--- a/app/src/main/res/layout/fragment_weather_forecast.xml
+++ b/app/src/main/res/layout/fragment_weather_forecast.xml
@@ -19,7 +19,8 @@
             <TableLayout
                 android:id="@+id/table_forecast"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:gravity="center">
 
             </TableLayout>
         </LinearLayout>
