--- a/app/src/main/res/layout/fragment_weather_basic_info.xml
+++ b/app/src/main/res/layout/fragment_weather_basic_info.xml
@@ -22,25 +22,34 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:gravity="center">
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/tv_place"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="15dp"
+                        android:gravity="center"
                         android:text="Place:"
-                        android:textSize="18sp" />
+                        android:textSize="32sp" />
 
-                    <EditText
-                        android:id="@+id/et_place"
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center">
+
+                    <TextView
+                        android:id="@+id/tv_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:editable="false"
-                        android:ems="10"
-                        android:focusable="false"
-                        android:inputType="textMultiLine"
-                        android:text="null" />
+                        android:layout_marginBottom="15dp"
+                        android:gravity="center"
+                        android:text="Text"
+                        android:textSize="22sp" />
                 </TableRow>
 
                 <TableRow
