Refactoring. Added button at setting to update data on request.

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -177,6 +177,7 @@
                     android:textSize="20sp" />
             </TableRow>
 
+
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -195,6 +196,19 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:textAlignment="center" />
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center">
+
+                <Button
+                    android:id="@+id/btn_weather_update_data"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Update Data" />
 
             </TableRow>
 
